@@ -31,6 +31,7 @@
   --enable-3dnow \
   --enable-monitor-mwait \
   --enable-xsave \
+  --enable-aes \
   --enable-x86-debugger \
   --enable-cdrom \
   --enable-sb16 \
